feature: mealTracking-addFood page
1. Added a fake database for food items
2. wrote js to render food items from database
3. implemented search food functionality.

--- a/mealTracking-addFood.html
+++ b/mealTracking-addFood.html
@@ -41,96 +41,29 @@
 			<section class="panel">
 				<div class="search">
 					<span class="material-symbols-outlined">search</span>
-					<input type="text" placeholder="Search foods…" />
+					<input type="text" placeholder="Search foods…" class="food-search-input" />
 				</div>
 
 				<div class="tabs">
-					<div class="tab active">ALL</div>
-					<div class="tab">Breakfast</div>
-					<div class="tab">Lunch</div>
-					<div class="tab">Dinner</div>
-					<div class="tab">Snacks</div>
+					<div class="tab switch-tab-all active">ALL</div>
+					<div class="tab switch-tab-recently">Recently</div>
+					<div class="tab switch-tab-favorite">Favorite</div>
 				</div>
 
 				<div class="grid">
-					<div class="card selected">
+					<!-- <div class="card selected">
 						<div class="title">Apple</div>
 						<div class="card-main-section">
 							<img src="./images/mealTracking/food-img/apple.png" alt="food img" class="food-img" />
 							<div class="nutrition-fact">
-								<span>xxx cals</span>
-								<span>xxx carbs</span>
-								<span>xxx protein</span>
-								<span>xxx fat</span>
+								<span class="nutrition-fact-cals"><span class="nutrition-fact-cals-val">xxx</span> cals</span>
+								<span class="nutrition-fact-carbs"><span class="nutrition-fact-carbs-val">xxx</span> carbs</span>
+								<span class="nutrition-fact-protein"><span class="nutrition-fact-protein-val">xxx</span> protein</span>
+								<span class="nutrition-fact-fat"><span class="nutrition-fact-fat-val">xxx</span> fat</span>
 							</div>
 						</div>
 						<button class="plus" title="Add"><span class="material-symbols-outlined">add</span></button>
-					</div>
-					<div class="card">
-						<div class="title">Apple</div>
-						<div class="card-main-section">
-							<img src="./images/mealTracking/food-img/apple.png" alt="food img" class="food-img" />
-							<div class="nutrition-fact">
-								<span>xxx cals</span>
-								<span>xxx carbs</span>
-								<span>xxx protein</span>
-								<span>xxx fat</span>
-							</div>
-						</div>
-						<button class="plus" title="Add"><span class="material-symbols-outlined">add</span></button>
-					</div>
-					<div class="card">
-						<div class="title">Apple</div>
-						<div class="card-main-section">
-							<img src="./images/mealTracking/food-img/apple.png" alt="food img" class="food-img" />
-							<div class="nutrition-fact">
-								<span>xxx cals</span>
-								<span>xxx carbs</span>
-								<span>xxx protein</span>
-								<span>xxx fat</span>
-							</div>
-						</div>
-						<button class="plus" title="Add"><span class="material-symbols-outlined">add</span></button>
-					</div>
-					<div class="card">
-						<div class="title">Apple</div>
-						<div class="card-main-section">
-							<img src="./images/mealTracking/food-img/apple.png" alt="food img" class="food-img" />
-							<div class="nutrition-fact">
-								<span>xxx cals</span>
-								<span>xxx carbs</span>
-								<span>xxx protein</span>
-								<span>xxx fat</span>
-							</div>
-						</div>
-						<button class="plus" title="Add"><span class="material-symbols-outlined">add</span></button>
-					</div>
-					<div class="card">
-						<div class="title">Apple</div>
-						<div class="card-main-section">
-							<img src="./images/mealTracking/food-img/apple.png" alt="food img" class="food-img" />
-							<div class="nutrition-fact">
-								<span>xxx cals</span>
-								<span>xxx carbs</span>
-								<span>xxx protein</span>
-								<span>xxx fat</span>
-							</div>
-						</div>
-						<button class="plus" title="Add"><span class="material-symbols-outlined">add</span></button>
-					</div>
-					<div class="card">
-						<div class="title">Apple</div>
-						<div class="card-main-section">
-							<img src="./images/mealTracking/food-img/apple.png" alt="food img" class="food-img" />
-							<div class="nutrition-fact">
-								<span>xxx cals</span>
-								<span>xxx carbs</span>
-								<span>xxx protein</span>
-								<span>xxx fat</span>
-							</div>
-						</div>
-						<button class="plus" title="Add"><span class="material-symbols-outlined">add</span></button>
-					</div>
+					</div> -->
 				</div>
 			</section>
 
@@ -141,23 +74,6 @@
 				</a>
 			</div>
 		</div>
-    <script>
-      document.getElementById("mealTrackingBtn").addEventListener("click", () => {
-        window.location.href = "mealTracking.html";
-      });
-
-      document.getElementById("trackAWorkoutBtn").addEventListener("click", () => {
-        window.location.href = "workout.html";
-      });
-
-      document.getElementById("communityPageBtn").addEventListener("click", () => {
-        window.location.href = "community.html";
-      });
-
-      document.getElementById("createAPostBtn").addEventListener("click", () => {
-        sessionStorage.setItem("makeAPostFlag", true);
-        window.location.href = "community.html";
-      });
-    </script>
+		<script src="./js/mealTracking-addFood.js"></script>
 	</body>
 </html>
