--- a/mealTracking.html
+++ b/mealTracking.html
@@ -91,7 +91,7 @@
 							<ul class="food-item-list">
 								<li class="food-item">
 									<span>Apple</span>
-									<input type="number" placeholder="1" class="food-item-quantity-input" />
+									<input type="number" placeholder="1" class="food-item-quantity-input" disabled />
 									<span class="material-symbols-outlined btn food-item-delete-btn"> close </span>
 								</li>
 							</ul>
@@ -143,7 +143,7 @@
 							<ul class="food-item-list">
 								<li class="food-item">
 									<span>Apple</span>
-									<input type="number" placeholder="1" class="food-item-quantity-input" />
+									<input type="number" placeholder="1" class="food-item-quantity-input" disabled />
 									<span class="material-symbols-outlined btn food-item-delete-btn"> close </span>
 								</li>
 							</ul>
@@ -196,7 +196,7 @@
 							<ul class="food-item-list">
 								<li class="food-item">
 									<span>Apple</span>
-									<input type="number" placeholder="1" class="food-item-quantity-input" />
+									<input type="number" placeholder="1" class="food-item-quantity-input" disabled />
 									<span class="material-symbols-outlined btn food-item-delete-btn"> close </span>
 								</li>
 							</ul>
@@ -210,7 +210,7 @@
 						<div class="meal-section meal-section-header">
 							<div class="meal-header-text-title">Snacks</div>
 							<div>
-								<img src="/images/mealTracking/meal-logo/breakfast.png" alt="snacks logo" class="meal-logo-img" />
+								<img src="/images/mealTracking/meal-logo/snacks.png" alt="snacks logo" class="meal-logo-img" />
 								<div class="meal-header-text">
 									<p class="meal-header-text-calory-summary">
 										<span class="meal-header-text-calory-count">0</span> cals
@@ -248,7 +248,7 @@
 							<ul class="food-item-list">
 								<li class="food-item">
 									<span>Apple</span>
-									<input type="number" placeholder="1" class="food-item-quantity-input" />
+									<input type="number" placeholder="1" class="food-item-quantity-input" disabled />
 									<span class="material-symbols-outlined btn food-item-delete-btn"> close </span>
 								</li>
 							</ul>
@@ -263,20 +263,25 @@
 			<div class="side-panel">
 				<div class="side-panel-item progress-circle-container">
 					<!-- progress circle UI component -->
-					<svg width="250" height="250" viewBox="0 0 250 250" class="circular-progress" style="--progress: 75">
-						<circle class="bg"></circle>
-						<circle class="fg"></circle>
-					</svg>
+					<div class="progress-circle-wrapper">
+						<svg width="250" height="250" viewBox="0 0 250 250" class="circular-progress" style="--progress: 75">
+							<circle class="bg"></circle>
+							<circle class="fg"></circle>
+						</svg>
+						<div class="progress-circle-text">
+							<span>1505</span>
+							<span>/</span>
+							<span>2000</span>
+						</div>
+					</div>
 
 					<div class="circular-progress-toggle-bar">
-						<div class="toggle-bar-item toggle-bar-item-calories selected">calories</div>
-						<div class="toggle-bar-item toggle-bar-item-fat">fat</div>
-						<div class="toggle-bar-item toggle-bar-item-protein">protein</div>
-						<div class="toggle-bar-item toggle-bar-item-carbs">carbs</div>
+						<div class="toggle-bar-item btn toggle-bar-item-calories selected">calories</div>
+						<div class="toggle-bar-item btn toggle-bar-item-fat">fat</div>
+						<div class="toggle-bar-item btn toggle-bar-item-protein">protein</div>
+						<div class="toggle-bar-item btn toggle-bar-item-carbs">carbs</div>
 					</div>
-				</div>
 
-				<div class="side-panel-item set-goal-btn-container">
 					<a href="mealTracking-setGoal.html" class="btn set-goal-btn">
 						<span class="set-goal-btn-text">Set Goals</span>
 					</a>
@@ -285,22 +290,6 @@
 		</main>
 		<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 		<script src="./js/mealTracking.js"></script>
-    <script>
-      document.getElementById("mealTrackingBtn").addEventListener("click", () => {
-        window.location.href = "mealTracking.html";
-      });
-  
-      document.getElementById("trackAWorkoutBtn").addEventListener("click", () => {
-        window.location.href = "workout.html";
-      });
-  
-      document.getElementById("communityPageBtn").addEventListener("click", () => {
-        //window.location.href = "";
-      });
-  
-      document.getElementById("createAPostBtn").addEventListener("click", () => {
-        //window.location.href = "";
-      });
-    </script>
+		<script></script>
 	</body>
 </html>
