--- a/mealTracking.html
+++ b/mealTracking.html
@@ -80,7 +80,7 @@
 								</p>
 							</div>
 							<div class="macro-summary-item macro-summary-carbs">
-								<span class="material-symbols-outlined"> grass </span>
+								<span class="material-symbols-outlined"> yakitori </span>
 								<p class="macro-summary-item-text">
 									<span class="label">Fats</span>
 									<span class="value">0 g</span>
@@ -134,7 +134,7 @@
 								</p>
 							</div>
 							<div class="macro-summary-item macro-summary-carbs">
-								<span class="material-symbols-outlined"> grass </span>
+								<span class="material-symbols-outlined"> yakitori </span>
 								<p class="macro-summary-item-text">
 									<span class="label">Fats</span>
 									<span class="value">0 g</span>
@@ -187,7 +187,7 @@
 								</p>
 							</div>
 							<div class="macro-summary-item macro-summary-carbs">
-								<span class="material-symbols-outlined"> grass </span>
+								<span class="material-symbols-outlined"> yakitori </span>
 								<p class="macro-summary-item-text">
 									<span class="label">Fats</span>
 									<span class="value">0 g</span>
@@ -239,7 +239,7 @@
 								</p>
 							</div>
 							<div class="macro-summary-item macro-summary-carbs">
-								<span class="material-symbols-outlined"> grass </span>
+								<span class="material-symbols-outlined"> yakitori </span>
 								<p class="macro-summary-item-text">
 									<span class="label">Fats</span>
 									<span class="value">0 g</span>
@@ -281,7 +281,7 @@
 							<span class="current-count-calories"></span>
 							<span>--------</span>
 							<span class="progress-circle-label">Goal:</span>
-							<span>2000</span>
+							<span class="progress-circle-goal-label-calorie">2000</span>
 						</div>
 					</div>
 					<div class="progress-circle-wrapper progress-circle-fat">
@@ -299,7 +299,7 @@
 							<span class="current-count-fat"></span>
 							<span>------</span>
 							<span class="progress-circle-label">Goal:</span>
-							<span>fat</span>
+							<span class="progress-circle-goal-label-fat">fat</span>
 						</div>
 					</div>
 					<div class="progress-circle-wrapper progress-circle-protein">
@@ -317,7 +317,7 @@
 							<span class="current-count-protein"></span>
 							<span>------</span>
 							<span class="progress-circle-label">Goal:</span>
-							<span>protein</span>
+							<span class="progress-circle-goal-label-protein">protein</span>
 						</div>
 					</div>
 					<div class="progress-circle-wrapper progress-circle-carbs">
@@ -335,7 +335,7 @@
 							<span class="current-count-carbs"></span>
 							<span>------</span>
 							<span class="progress-circle-label">Goal:</span>
-							<span>carbs</span>
+							<span class="progress-circle-goal-label-carbs">carbs</span>
 						</div>
 					</div>
 
