--- a/registration.html
+++ b/registration.html
@@ -4,11 +4,11 @@
 		<link rel="stylesheet" href="css/registrationStyle.css">
 	</head>
 	<body>
-		<div class="register">
-			<input id="usernameInput" placeholder="username">
-			<input id="emailInput" placeholder="email">
-			<input id="passwordInput" placeholder="password">
-			<input id="confirmPasswordInput" placeholder="confirm password">
+		<div id="inputForm" class="register">
+			<input id="usernameInput" autocomplete="off" placeholder="username">
+			<input id="emailInput" autocomplete="off" placeholder="email">
+			<input id="passwordInput" autocomplete="off" placeholder="password">
+			<input id="confirmPasswordInput" autocomplete="off" placeholder="confirm password">
 			<div class="button">
 				<button id="advancedRegistrationBtn">
 					Advanced Setup
